--- a/default.htm
+++ b/default.htm
@@ -9,8 +9,8 @@
   <!-- Site Properities -->
   <title>Troubleshooting CSS - Semantic UI</title>
 
-  <!--<link rel="stylesheet" type="text/css" href="css/semantic.min.css">-->
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.1/semantic.min.css">
+  <link rel="stylesheet" type="text/css" href="css/semantic.min.css">
+  <!--<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.12.1/semantic.min.css">-->
   <link rel="stylesheet" type="text/css" href="css/cats.css">
   <link rel="stylesheet" type="text/css" href="css/troubleshooting.css">
 
